# vglnt

./: README.md  package.json
apps/vglnt-api/: .gitignore  app.ts  bun.lockb  final_output.json  index.ts  main.ts  package.json  pnpm-lock.yaml  process_frames.ts  prompt.txt  score_processor.ts  split_into_frames.ts
apps/vglnt-api-v2/: Cargo.toml
apps/vglnt-api-v2/src/: main.rs
apps/vglnt-app/: bun.lockb  components.json  package.json  pnpm-lock.yaml  postcss.config.js  rsbuild.config.ts  tailwind.config.js  tsconfig.json
apps/vglnt-app/src/: App.css  App.tsx
apps/vglnt-app/src/lib/: types.ts
apps/vglnt-data/: README.md  download.py  prepare.py  pyproject.toml
apps/vglnt-llamav-ft/: Modelfile  main.py  pyproject.toml  requirements.txt
apps/vglnt-lstm/: Makefile
apps/vglnt-lstm-py/: main.py  requiements.txt
apps/vglnt-lstm/include/: lstm_cuda_kernels.cuh  lstm_layer.hpp  lstm_types.hpp
apps/vglnt-lstm/src/: lstm_cuda_kernels.cu  lstm_layer.cc  main.cc
apps/vglnt-mob/: README.md  app.json  package.json  pnpm-lock.yaml
apps/vglnt-mob/app/: index.tsx
apps/vglnt-pwa/: package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.ts
apps/vglnt-pwa/src/: App.css  App.tsx  types.ts
apps/vglnt-pwa/src/components/: SensorRecorder.tsx  SessionViewer.tsx
apps/vglnt-pwa/src/services/: database.ts  recorder.ts
apps/vglnt-server/: Cargo.toml
apps/vglnt-server/src/: error.rs  llm.rs  lstm.rs  main.rs  types.rs
apps/vglnt-server/src/api/: handlers.rs  mod.rs  routes.rs
