[package]
name = "vglnt-api-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-multipart = "0.6"                                # forded to use old version cauz 0.8 doen't work with actix 4.9
tch = "0.13"
opencv = "0.84"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.14"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
dashmap = "5.5"
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15"
thiserror = "1.0"
tempfile = "3.8"
